# arm_vision

./: .gitignore  README.md
.marscode/: deviceInfo.json
arm_vision_cpp/: CMakeLists.txt
arm_vision_cpp/calibration/: calibrate_stereo.cpp  capture.cpp  verify_stereo.cpp
arm_vision_cpp/configs/: stereo_config.yaml  stereo_params.yaml
arm_vision_cpp/tools/: CMakeLists.txt  thread_pool.hpp
arm_vision_python/calibration/: collect_images.py  stereo_calibrate.py  test_rectification.py
arm_vision_python/calibration/configs/: config.yaml
arm_vision_python/calibration/output/: stereo_params.yaml
